fixes #235